--- a/integral.html
+++ b/integral.html
@@ -3,9 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<style type="text/css">
+	integral-equation {
+		display: block;
+	}
+	</style>
 	<script type="text/javascript" src="integral.js"></script>
 </head>
 <body>
+	<integral-equation></integral-equation>	
+	<integral-equation></integral-equation>	
+	<integral-equation></integral-equation>	
+	<integral-equation></integral-equation>	
+	<integral-equation></integral-equation>	
 	<integral-equation></integral-equation>	
 </body>
 </html>
