--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,7 @@
 	<style type="text/css">
 	integral-equation {
 		display: block;
+		margin-bottom: 20px;
 	}
 	</style>
 	<script type="text/javascript" src="integral.js"></script>
